--- a/Irrgarten/nbproject/project.properties
+++ b/Irrgarten/nbproject/project.properties
@@ -73,7 +73,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Irrgarten
-main.class=irrgarten.TestP1
+main.class=irrgarten.Main.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
